# vkex

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: DiffuseTexture.ps.spv  DiffuseTexture.vs.spv  DrawTexture.ps.spv  DrawTexture.vs.spv
projects/: CMakeLists.txt
projects/basic/: CMakeLists.txt
projects/basic/00_minimum_program/: CMakeLists.txt  main.cpp
projects/basic/01_vkex_info/: CMakeLists.txt  main.cpp
projects/basic/01_vkex_info/ggp/: 01_vkex_info.sln  01_vkex_info.vcxproj  01_vkex_info.vcxproj.filters
projects/basic/01_vkex_info_fullscreen/: CMakeLists.txt  main.cpp
projects/basic/02_cube/: CMakeLists.txt  main.cpp
projects/basic/03_render_work/: CMakeLists.txt  main.cpp
projects/basic/03_render_work_timeline/: CMakeLists.txt  main.cpp
projects/basic/04_descriptor_buffer/: CMakeLists.txt  main.cpp
projects/common/: AssetUtil.cpp  AssetUtil.h  DebugUi.cpp  DebugUi.h  SimpleRenderPass.cpp  SimpleRenderPass.h
src/: CMakeLists.txt
src/shaders/: Common.h  DIffuseTexture.hlsl  DebugDrawTexture.hlsl  DebugDrawVertexColor.hlsl  DiffuseVertexColor.hlsl  DrawTexture.hlsl  DrawVertexColor.hlsl
src/vkex/: Application.cpp  Application.h  ArgParser.cpp  ArgParser.h  Bitmap.cpp  Bitmap.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Cast.cpp  Cast.h  Command.cpp  Command.h  Config.h  ConfigMath.h  CpuResource.cpp  CpuResource.h  DebugMarker.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  Entity.cpp  Entity.h  FileSystem.h  Forward.h  Geometry.cpp  Geometry.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Log.cpp  Log.h  MIPFile.cpp  MIPFile.h  Pipeline.cpp  Pipeline.h  (+33 more)
